# fp-course

./: README.md  run-hw3.sh
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task4.hs  Task5.hs
hw1/: hw1.cabal
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/src/Block4/: Task1.hs  Task2.hs
hw1/src/Block5/: Task1.hs  Task2.hs  Task3.hs
hw2/: hw2.cabal
hw2/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw2/src/Block2/: Task1.hs  Task2.hs  Task3_1.hs  Task3_2.hs
hw2/src/Block3/: Task1.hs  Task2.hs  Task3.hs
hw2/test/Block1/: Task1Spec.hs
hw2/test/Block2/: Task1Spec.hs
hw2/test/Block3/: Task2Spec.hs  Task3Spec.hs
hw3/: README.md  mini-shell.cabal
hw3/app/: Main.hs
hw3/src/: Interpreter.hs  Parser.hs
hw3/test/: test.sh
hw3/test/task1/: test.sh
hw3/test/task2/: longGenerated.sh
hw4/: hw4.cabal
hw4/bench/: Bench.hs
hw4/src/: RandomUtils.hs  Task1.hs  Task1Utils.hs  Task2.hs
hw4/test/: Task1Spec.hs
hw5/: README.md  hw5.cabal
hw5/src/: Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw5/test/: Task5Spec.hs  Task7Spec.hs
