name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Denis Vaksman
maintainer:          dr.denisv2016@yandex.ru
copyright:           2019 Denis Vaksman

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                       Block1.Task2
                       Block1.Task3
                       Block2.Task1
                       Block2.Task2
                       Block2.Task3_1
                       Block2.Task3_2
                       Block3.Task1
                       Block3.Task2
                       Block3.Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, mtl, containers
  default-language:    Haskell2010

test-suite test-hw2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw2
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
  default-language:    Haskell2010
